--- a/transformations.tex
+++ b/transformations.tex
@@ -310,6 +310,9 @@ The following flow rewriting system is called $\frc$:
 \end{definition}
 
 \TODO{Change the definition of reduction rule so they can apply under a given polarity assignment.}
+
+\TODO{Rethink how these reduction rules are defined. It might not be the best way.}
+
 %---------------------------------------
 \begin{definition}
 The reduction rules $\rcdiu^\ppl$, $\ridcu^\ppl$, $\rcdcu^\ppl$, $\rcd^\ppl$ and $\rcu^\ppl$ are the rules $\rcdiu$, $\ridcu$, $\rcdcu$, $\rcd$ and $\rcu$, respectively, where the (co)contraction vertex in the redex is positive under a given polarity assignment.
@@ -698,6 +701,10 @@ we define global transformations with graphical expressions $r\colon\phi\to\psi$
 
 %======================================
 \subsection{Four Boxes}
+
+\TODO{Flesh out the definition.}
+
+\TODO{Come up with a better name.}
 
 \newcommand{\frfb}{{\mathsf{fb}}}
 %---------------------------------------
