--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -69,7 +69,7 @@ and, for each $\rho\in\{\coor,\coand,\asor,\asand,\unor,\unand,\idor,\idand\}$, 
 respectively.
 \end{definition}
 
-\TODO{Check and prove (Complexity paper with Paola, Alessio and Lutz).}
+\TODO{Check and prove (Complexity paper by Alessio and Paola).}
 
 \begin{lemma}
 If there exists a derivation $\vlder{}{\{\coor,\coand,\asor,\asand,\unor,\unand,\idor,\idand\}}{\beta}{\alpha}$, then there exists a derivation $\vlder{\Phi}{\{\coor,\coand,\asor,\asand,\unor,\unand,\idor,\idand\}}{\beta}{\alpha}$, such that $|\Phi|\le(|\alpha|+|\beta|)^2$.
