Remarked about proofs with certain flows

--- a/defs.tex
+++ b/defs.tex
@@ -41,3 +41,4 @@
 \newcommand{\weaken}{\mathsf{w}}
 \newcommand{\gwu}{{\weaken{\uparrow}}}
 \newcommand{\gwd}{{\weaken{\uparrow}}}
+\newcommand{\KS}{\mathsf{KS}}
