--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -230,6 +230,12 @@ Given a derivation $\Phi$ with associated flow $\phi$, $|\Phi|\leq|\phi|^3$.
 A derivation with associated atomic flow $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}) if $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}).
 \end{definition}
 
+\TODO{Add references to Propositions.}
+
+\begin{remark}
+A streamlined proof is cut-free, a super streamlined proof is analytic and a hyper streamlined proof is in system $\KS$.
+\end{remark}
+
 \begin{definition}\label{DefDerCore}
 A derivation $\vlder{\Phi}{}{\beta}{\alpha}$ with associated atomic flow $\phi$, such that $\phi_1$, $\dots$, $\phi_n$ are all the non-weakly-streamlined, connected subflows of $\phi$, a \emph{core of\/ $\Phi$} is defined to be a derivation
 \[
